cleaning code and refactor dto to record